Add effect sample

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -814,7 +814,7 @@ endif()
 
 
 if(BUILD_SAMPLES)
-	set(samples treeview customlog drag loaddocument transform bitmapfont animation benchmark demo databinding)
+	set(samples treeview customlog drag loaddocument transform bitmapfont animation benchmark demo databinding effect)
 	set(tutorials template drag)
 
 	if(ENABLE_LOTTIE_PLUGIN)
@@ -962,6 +962,9 @@ if(BUILD_SAMPLES)
 	)
 	install(DIRECTORY ${PROJECT_SOURCE_DIR}/Samples/basic/demo/data
 			DESTINATION ${SAMPLES_DIR}/basic/demo
+	)
+	install(DIRECTORY ${PROJECT_SOURCE_DIR}/Samples/basic/effect/data
+			DESTINATION ${SAMPLES_DIR}/basic/effect
 	)
 	install(DIRECTORY ${PROJECT_SOURCE_DIR}/Samples/basic/transform/data
 			DESTINATION ${SAMPLES_DIR}/basic/transform
