Implement enumerated lists for option selection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,35 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # "RMLUI_" prefix is included in order to take advantage of the fact that the
 # CMake GUI can group variables based on their prefix to make more clear
 # which options are specific to this project
-set(RMLUI_FONT_INTERFACE "freetype" CACHE STRING "Font engine to build RmlUi with. If left empty, RmlUi won't be built with any of the included font interfaces.")
+set(RMLUI_FONT_INTERFACE "freetype" CACHE STRING "Font interface to build RmlUi with. If set to \"none\", RmlUi won't be built with any of the included font interfaces.")
 option(RMLUI_ENABLE_LOTTIE_PLUGIN "Enable plugin for Lottie animations. Requires the rlottie library." OFF)
 option(RMLUI_ENABLE_SVG_PLUGIN "Enable plugin for SVG images. Requires the lunasvg library." OFF)
 option(RMLUI_BUILD_SAMPLES "Build samples of the library." OFF)
 set(RMLUI_SAMPLES_BACKEND "GLFW_GL3" CACHE STRING "Backend to use when building the RmlUi samples. Choose one from ./CMake/Backends.cmake.")
 option(BUILD_SHARED_LIBS "CMake standard option. Choose whether to build RmlUi and RmlUi's debugger as shared libraries." ON)
+
+# Add lists of available options for those that support it
+include("${PROJECT_SOURCE_DIR}/CMake/OptionsLists.cmake")
+
+# Set hints for non-boolean custom CMake options
+set_property(CACHE RMLUI_SAMPLES_BACKEND PROPERTY STRINGS ${RMLUI_SAMPLES_AVAILABLE_BACKENDS})
+set_property(CACHE RMLUI_FONT_INTERFACE PROPERTY STRINGS ${RMLUI_AVAILABLE_FONT_INTERFACES})
+
+# Check if the specified sample backend is available
+list(FIND RMLUI_SAMPLES_AVAILABLE_BACKENDS ${RMLUI_SAMPLES_BACKEND} backend_index)
+if(backend_index EQUAL "-1")
+    # If the backend identifier isn't found in the list, return error
+    message(FATAL_ERROR "The RmlUi backend ID specified in RMLUI_SAMPLES_BACKEND is not valid.")
+endif()
+unset(backend_index)
+
+# Check if the specified font interface is available
+list(FIND RMLUI_AVAILABLE_FONT_INTERFACES ${RMLUI_FONT_INTERFACE} fontinterface_index)
+if(fontinterface_index EQUAL "-1")
+    # If the backend identifier isn't found in the list, return error
+    message(FATAL_ERROR "The RmlUi font interface ID specified in RMLUI_FONT_INTERFACE is not valid.")
+endif()
+unset(fontinterface_index)
 
 # Add custom CMake modules path for external dependencies
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake/Modules")
